# bird_stance_classification

./: .env.example  .gitignore  DEPLOYMENT.md  ENVIRONMENT.md  IMPLEMENTATION_PROGRESS.md  Makefile  OPERATIONS.md  PLAN2.md  README.md  SPECIFICATION.md  SPECIFICATION_v2.md  current_state.md  project-1-at-2026-03-02-14-48-0edc627b.json  project-4-at-2026-02-19-16-46-a663b8e7.json  project-4-at-2026-02-20-10-24-00d4bdd1.json  pyproject.toml  run.sh  tasks.json
archived/legacy/: README.md
config/: project.example.yaml  train_attributes.yaml  train_attributes_model_b_best.yaml
deploy/: docker-compose.app-only.yml  docker-compose.iats-ml.yml  docker-compose.local.yml  docker-compose.yml
deploy/env/: iats.env.example  local.env.example  truenas.env.example
deploy/overrides/: localfiles_views.py
docs/: annotation_schema_current_vs_updates.md  annotator_guide.md  current_state.md  implementation_checkpoints.md  ops_workflows.md  quick_resume_deployment.md  repo_audit_2026-04-10.md  runbook_e2e.md
docs/archive/: PLAN.md  README.md  e2e_signoff_ann_v902.md  implementation_checkpoints.md  (+6 more)
labelstudio/: label_config.xml
ops/: common.sh  git_pull_ff_only.sh  iats_build_attributes_dataset_remote.sh  iats_deploy_ml_remote.sh  iats_deploy_model_b_remote.sh  iats_evaluate_model_b_remote.sh  iats_import_exports.sh  iats_normalize_annotations_remote.sh  iats_promote_model_remote.sh  iats_sync_data.sh  iats_train_attributes_cv_remote.sh  iats_train_attributes_final_remote.sh  iats_train_remote.sh  local_compose.sh  remote_repo_exec.sh  smoke_remote.sh  truenas_create_project_remote.sh  truenas_deploy_ui_remote.sh  truenas_export_annotations_remote.sh  truenas_import_lines_batch_remote.sh  truenas_prefill_lines_predictions_remote.sh  truenas_prepare_lines_batch_remote.sh  truenas_refresh_lines_predictions_remote.sh
projects/datasets/: README.md  pyproject.toml
projects/datasets/sql/: build_dataset_duckdb.sql
projects/datasets/src/birdsys/datasets/: __init__.py  build_dataset.py  build_split.py  cli.py  dataset_common.py  export_normalize.py  make_crops.py
projects/datasets/tests/integration/: test_dataset_pipeline.py  test_export_normalize.py
projects/labelstudio/: README.md  label_config.xml  pyproject.toml
projects/labelstudio/deploy/: docker-compose.truenas.yml
projects/labelstudio/deploy/env/: truenas.env.example
projects/labelstudio/deploy/overrides/: localfiles_views.py
projects/labelstudio/src/birdsys/labelstudio/: __init__.py  backfill_task_metadata.py  build_localfiles_batch.py  cli.py  create_project.py  export_snapshot.py  extract_annotations.py  import_tasks.py  prefill_predictions.py  sync_species_data.py
projects/labelstudio/tests/integration/: test_build_localfiles_batch.py  test_extract_annotations.py  test_species_data_tools.py
projects/labelstudio/tests/unit/: test_create_project.py  test_prefill_predictions.py
projects/ml_backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
projects/ml_backend/deploy/: docker-compose.ai-ml.yml  docker-compose.iats-ml.yml
projects/ml_backend/deploy/env/: ai.env.example  iats.env.example
projects/ml_backend/src/birdsys/ml_backend/: __init__.py  cli.py  promote_model.py
projects/ml_backend/src/birdsys/ml_backend/app/: __init__.py  benchmark_predict.py  main.py  response_contract.py  serializers.py
projects/ml_backend/src/birdsys/ml_backend/app/predictors/: __init__.py  model_a_yolo.py  model_b_attributes.py  model_c_image_status.py
projects/ml_backend/tests/unit/: test_model_b_attribute_predictor.py
projects/ml_experiments/: README.md  pyproject.toml
projects/ml_experiments/config/: train_attributes.yaml  train_attributes_served_audit.yaml
projects/ml_experiments/sandbox_templates/model_b_autoresearch_p7_v1/: .gitignore  AGENT_LAUNCH_PROMPT.md  README.md  clear_unannotated_project7_predictions.py  common.py  eval.py  export_candidate.py  inspect_results.py  plot_training_curves.py  prepare.py  program.md  pyproject.toml  refresh_project7_predictions.py  run_once.py  train.py
projects/ml_experiments/sandbox_templates/model_b_autoresearch_p7_v1/baselines/: baseline_seed_variance_summary.json  current_served_model_fixed_folds_cv.json  reference_thresholds.json
projects/ml_experiments/src/birdsys/ml_experiments/: __init__.py  audit_served_model_b.py  cli.py  common.py  create_autoresearch_sandbox.py  evaluate_model_b.py  evaluate_model_b_checkpoint.py  metrics.py  model_b_evaluation.py  reports.py  train_attributes.py  train_attributes_cv.py
projects/ml_experiments/tests/: conftest.py
projects/ml_experiments/tests/unit/: test_audit_served_model_b.py  test_autoresearch_sandbox_template.py  test_create_autoresearch_sandbox.py  test_evaluate_model_b.py  test_evaluate_model_b_checkpoint.py  test_metrics.py  test_model_b_evaluation.py  test_reports.py  test_train_attributes.py  test_train_attributes_cv.py  test_train_attributes_parse.py
sandbox_templates/model_b_autoresearch_p7_v1/: .gitignore  README.md  common.py  export_candidate.py  plot_training_curves.py  pyproject.toml  refresh_project7_predictions.py  run_once.py
scripts/: bootstrap_labelstudio_users.sh  build_annotation_image_mirror.py  build_dataset.py  build_labelstudio_localfiles_batch.py  create_autoresearch_sandbox.py  create_labelstudio_project.py  evaluate_model_b_checkpoint.py  export_labelstudio_snapshot.py  export_normalize.py  import_labelstudio_tasks.py  infer_batch.py  make_crops.py  migrate_labelstudio_export_to_isbird.py  predict_resting_from_detections.py  prefill_labelstudio_predictions.py  prepare_labelstudio_import.py  promote_model.py  register_images.py  select_active_learning_batch.py  train_attributes.py  train_attributes_cv.py  train_image_status.py
shared/: .env.example
shared/birdsys_core/: README.md  pyproject.toml
shared/birdsys_core/src/birdsys/core/: __init__.py  attributes.py  config.py  contracts.py  logging.py  model_b_artifacts.py  models.py  paths.py  reporting.py
shared/birdsys_core/tests/unit/: test_attributes.py  test_model_b_artifacts.py
sql/: build_dataset_duckdb.sql
(+104 files in other folders)
