[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdsys"
version = "0.1.0"
description = "Bird annotation and classification system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "BirdSys" }]
dependencies = [
  "duckdb>=1.1.3,<2",
  "fastapi>=0.116.0,<1",
  "numpy>=1.26,<3",
  "opencv-python>=4.10,<5",
  "pandas>=2.2,<3",
  "pillow>=10,<12",
  "pyarrow>=18,<20",
  "pytest>=8.3,<9",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7",
  "timm>=1.0.12,<2",
  "torch>=2.5,<2.11",
  "torchvision>=0.20,<0.26",
  "tqdm>=4.66,<5",
  "ultralytics>=8.3,<9",
  "uvicorn[standard]>=0.33,<1",
]

[project.optional-dependencies]
dev = ["ruff>=0.9,<1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
