[project]
name = "model-b-autoresearch-p7"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pillow>=10,<12",
  "pyarrow>=18,<20",
  "pyyaml>=6.0,<7",
  "timm>=1.0.12,<2",
  "torch>=2.5,<2.11",
  "torchvision>=0.20,<0.26",
]

[tool.uv]
package = false
