[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdsys-core"
version = "0.1.0"
description = "BirdSys shared internal contracts"
requires-python = ">=3.11,<3.12"
dependencies = [
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7",
  "timm>=1.0.12,<2",
  "torch>=2.5,<2.11",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["birdsys.core*"]
namespaces = true
